--- a/RunExamples/MacroEx/ReadMe
+++ b/RunExamples/MacroEx/ReadMe
@@ -1,1 +1,2 @@
-In this example , the file contain a macro , extern and entry directives and no errors (empty line or note is being ignored), so the ob , extern and entry files were all created and the am file also with the macro spread.
+In this example , the file contain a macro , extern and entry directives and no errors (empty line or note is being ignored), 
+so the ob , extern and entry files were all created and the am file also with the macro spread.
