--- a/RunExamples/NoMacroEx/ReadMe
+++ b/RunExamples/NoMacroEx/ReadMe
@@ -1,2 +1,2 @@
-This is an exapmle of no macro file , the program still openes a am file just identical to the original file , 
+This is an example of no macro file , the program still opens a am file just identical to the original file , 
 since there is only entry directive and no errors only am, entry file and ob were created.
